--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
+    "react-water-wave": "^2.0.1",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
